--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -940,13 +940,12 @@ a {
 }
 
 .work-photography__showcase-grid {
-  -ms-grid-columns: (auto)[3];
-      grid-template-columns: repeat(3, auto);
+  -ms-grid-columns: (auto)[2];
+      grid-template-columns: repeat(2, auto);
   grid-gap: 1rem;
 }
 
 .work-photography__showcase-grid .showcase-item__wrapper {
-  height: 420px;
   overflow: hidden;
   position: relative;
 }
@@ -965,8 +964,8 @@ a {
   right: 0;
   z-index: 10;
   width: 100%;
-  height: 20%;
-  background-color: rgba(255, 230, 0, 0.9);
+  height: 12%;
+  background-color: rgba(255, 230, 0, 0.92);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -982,7 +981,39 @@ a {
 }
 
 .work-photography__showcase-grid .showcase-item__wrapper .showcase-item__description:hover {
-  height: 100%;
+  height: 16%;
+}
+
+.work-filmmaking {
+  margin-bottom: 12rem;
+}
+
+.work-filmmaking .video-showcase-wrapper {
+  position: relative;
+}
+
+.work-filmmaking .video-showcase-wrapper .video-showcase-description {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  background-color: rgba(255, 230, 0, 0.92);
+  width: 100%;
+  height: 100px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.work-filmmaking .video-showcase-wrapper .video-showcase-description:hover {
+  -webkit-transform: none !important;
+          transform: none !important;
+  height: 120px;
 }
 
 .video-container {
