--- a/assets/scss/pages/_work-categories.scss
+++ b/assets/scss/pages/_work-categories.scss
@@ -5,11 +5,10 @@ a {
 
 // PHOTOGRAPHY
 .work-photography__showcase-grid {
-  grid-template-columns: repeat(3, auto);
+  grid-template-columns: repeat(2, auto);
   grid-gap: 1rem;
 
   .showcase-item__wrapper {
-    height: 420px;
     overflow: hidden;
     position: relative;
 
@@ -28,15 +27,15 @@ a {
       right: 0;
       z-index: 10;
       width: 100%;
-      height: 20%;
-      background-color: rgba(#ffe600, 0.9);
+      height: 12%;
+      background-color: rgba(#ffe600, 0.92);
       display: flex;
       align-items: center;
       justify-content: center;
       gap: 0.5rem;
       transition: $default-speed;
       &:hover {
-        height: 100%;
+        height: 16%;
       }
     }
   }
@@ -148,6 +147,31 @@ a {
 // }
 
 // FILMMAKING
+.work-filmmaking {
+  margin-bottom: 12rem;
+
+  .video-showcase-wrapper {
+    position: relative;
+
+    .video-showcase-description {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      background-color: rgba(#ffe600, 0.92);
+      width: 100%;
+      height: 100px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      &:hover {
+        transform: none !important;
+        height: 120px;
+      }
+    }
+  }
+}
+
 .video-container {
   position: relative;
   padding-bottom: 56.25%; /* 16:9 */
