--- a/assets/scss/components/_gallery.scss
+++ b/assets/scss/components/_gallery.scss
@@ -32,19 +32,61 @@
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-gap: 2rem;
-}
 
-.filmmaking__video-container {
-  position: relative;
-  padding-bottom: 56.25%; /* 16:9 */
-  height: 0;
-
-  iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
+  .filmmaking__thumbnail-container {
+    position: relative;
     width: 100%;
     height: 100%;
+    overflow: hidden !important;
+
+    a {
+      &:hover {
+        img {
+          filter: blur(2.5px) grayscale(1);
+        }
+
+        .img-description-hover {
+          display: flex;
+        }
+      }
+
+      img {
+        transition: all, 0.3s ease;
+      }
+
+      .img-description-hover {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        padding: 2rem 5rem;
+
+        background: rgba($color: #000000, $alpha: 0.7);
+
+        display: none;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+        h1 {
+          color: #fff !important;
+          margin: 0 !important;
+          padding: 0 !important;
+          text-align: center;
+          text-transform: uppercase;
+          font-size: 1.2rem;
+          color: #fff !important;
+        }
+
+        h6 {
+          color: #ffe600 !important;
+          margin: 0 !important;
+          padding: 0 !important;
+          margin-bottom: 1rem !important;
+        }
+      }
+    }
   }
 }
 
